feat: HTML email templates with DynaMart branding, logo, and order confirmation email